Testing git integration

--- a/SeminarBeispiel.tex
+++ b/SeminarBeispiel.tex
@@ -100,6 +100,8 @@ Die Herstellung von Gummibärchen ist ein aufwändiger Prozess, der aus mehreren
 befassen sich mit diesem Thema.
 
 
+The FitnessGram Pacer test is a multistage aerobic ...
+
 % Bibliographie entweder direkt hier eingeben (nur im Notfall)...
 %\begin{thebibliography}{9}
 %\bibitem{ACM2019}
