--- a/literatur.bib
+++ b/literatur.bib
@@ -1,37 +1,57 @@
-@misc{gummi,
-	author = {Wikipedia.de},
-	howpublished = {\url{https://de.wikipedia.org/wiki/Gummib%C3%A4r}},
-	lastchecked = {30.  Sptember 2024},
-	title = {Gummib{\"a}r},
-	year = {2024}}
+@article{eriksson2011comparison,
+  title={Comparison between JSON and YAML for data serialization},
+  author={Eriksson, Malin and Hallberg, Victor},
+  journal={The School of Computer Science and Engineering Royal Institute of Technology},
+  pages={1--25},
+  year={2011},
+  publisher={Citeseer}
+}
 
-@article{Ivory2001,
-	author = {Melody Y. Ivory and Marti A. Hearst},
-	journal = {ACM Computing Surveys},
-	number = {4},
-	pages = {470--516},
-	title = {The State of the Art in Automating Usability Evaluation of User Interfaces},
-	volume = {33},
-	year = {2001}}
+@INPROCEEDINGS{6215346,
+  author={Maeda, Kazuaki},
+  booktitle={2012 Second International Conference on Digital Information and Communication Technology and it's Applications (DICTAP)}, 
+  title={Performance evaluation of object serialization libraries in XML, JSON and binary formats}, 
+  year={2012},
+  volume={},
+  number={},
+  pages={177-182},
+  keywords={Java;XML;Libraries;Protocols;Standards;Computers;object serialization;performance evaluation;XML;JSON},
+  doi={10.1109/DICTAP.2012.6215346}}
 
-@misc{ACM2019,
-	author = {ACM},
-	howpublished = {\url{https://www.acm.org/publications/computing-classification-system/how-to-use}},
-	title = {How to Classify Works Using {ACM}'s Computing Classification System},
-	year = {2019}}
+@article{10.1145/944579.944589,
+author = {Hericko, Marjan and Juric, Matjaz B. and Rozman, Ivan and Beloglavec, Simon and Zivkovic, Ales},
+title = {Object serialization analysis and comparison in Java and .NET},
+year = {2003},
+issue_date = {August 2003},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+volume = {38},
+number = {8},
+issn = {0362-1340},
+url = {https://doi.org/10.1145/944579.944589},
+doi = {10.1145/944579.944589},
+abstract = {This article compares binary and XML object serialization on Java and Microsoft .NET platforms from the performance and size perspective. It uses three different types of objects and different number of objects to make a comparison which reflects real-world circumstances. The article has the following contributions: (1) it compares binary and XML serialization between Java and .NET to compare the efficiency of both platforms; (2) it compares binary and XML serialization within the platforms to compare the differences between the two serialization types; (3) it studies the reasons for performance differences and provides possible performance optimizations.},
+journal = {SIGPLAN Not.},
+month = aug,
+pages = {44–54},
+numpages = {11},
+keywords = {.NET, Binary, Java, Serialization, XML}
+}
 
-@inproceedings{Black1988,
-	acmid = {69220},
-	author = {Black, David L. and Golub, David B. and Hauth, Karl and Tevanian, Avadis and Sanzi, Richard},
-	booktitle = {Proceedings of the 1988 ACM SIGPLAN and SIGOPS workshop on Parallel and distributed debugging},
-	doi = {10.1145/68210.69220},
-	isbn = {0-89791-296-9},
-	location = {Madison, Wisconsin, USA},
-	numpages = {12},
-	pages = {45--56},
-	series = {PADD '88},
-	title = {The {Mach} Exception Handling Facility},
-	url = {http://doi.acm.org/10.1145/68210.69220},
-	year = {1988},
-	bdsk-url-1 = {http://doi.acm.org/10.1145/68210.69220},
-	bdsk-url-2 = {http://dx.doi.org/10.1145/68210.69220}}
+@INPROCEEDINGS{9142787,
+  author={Proos, Daniel Persson and Carlsson, Niklas},
+  booktitle={2020 IFIP Networking Conference (Networking)}, 
+  title={Performance Comparison of Messaging Protocols and Serialization Formats for Digital Twins in IoV}, 
+  year={2020},
+  volume={},
+  number={},
+  pages={10-18},
+  keywords={Protocols;Reliability;Quality of service;Cloud computing;Bandwidth;Servers;Google}}
+
+@misc{Charles2013,
+  author = {msgpack},
+  title = {msgpack},
+  year = {2010},
+  publisher = {GitHub},
+  journal = {GitHub repository},
+}
