--- a/literatur.bib
+++ b/literatur.bib
@@ -55,3 +55,48 @@ keywords = {.NET, Binary, Java, Serialization, XML}
   publisher = {GitHub},
   journal = {GitHub repository},
 }
+
+@inproceedings{bhatti2000object,
+  title={Object serialisation and deserialisation using xml},
+  author={Bhatti, Nassem and Goff, JML and Hassan, Waseem and Kovacs, Zsolt and Martin, Peter and McClatchey, Richard and Stockinger, Heinz and Willers, Ian},
+  booktitle={10th International Conference on Management of Data (COMAD 2000)},
+  year={2000},
+  organization={Citeseer}
+}
+
+@inproceedings{popic2016performance,
+  title={Performance evaluation of using Protocol Buffers in the Internet of Things communication},
+  author={Popi{\'c}, Sr{\dj}an and Pezer, Dra{\v{z}}en and Mrazovac, Bojan and Tesli{\'c}, Nikola},
+  booktitle={2016 international conference on smart systems and technologies (SST)},
+  pages={261--265},
+  year={2016},
+  organization={IEEE}
+}
+
+@inproceedings{vanura2018perfomance,
+  title={Perfomance evaluation of Java, JavaScript and PHP serialization libraries for XML, JSON and binary formats},
+  author={Vanura, Jan and Kriz, Pavel},
+  booktitle={Services Computing--SCC 2018: 15th International Conference, Held as Part of the Services Conference Federation, SCF 2018, Seattle, WA, USA, June 25-30, 2018, Proceedings 15},
+  pages={166--175},
+  year={2018},
+  organization={Springer}
+}
+
+@article{jackson2024streaming,
+  title={Streaming Technologies and Serialization Protocols: Empirical Performance Analysis},
+  author={Jackson, Samuel and Cummings, Nathan and Khan, Saiful},
+  journal={arXiv preprint arXiv:2407.13494},
+  year={2024}
+}
+
+@INPROCEEDINGS{9138939,
+  author={Jang, Jaeyoung and Jung, Sung Jun and Jeong, Sunmin and Heo, Jun and Shin, Hoon and Ham, Tae Jun and Lee, Jae W.},
+  booktitle={2020 ACM/IEEE 47th Annual International Symposium on Computer Architecture (ISCA)}, 
+  title={A Specialized Architecture for Object Serialization with Applications to Big Data Analytics}, 
+  year={2020},
+  volume={},
+  number={},
+  pages={322-334},
+  keywords={Object serialization;Domain-specific architecture;Data analytics;Apache Spark;Hardware-software co-design},
+  doi={10.1109/ISCA45697.2020.00036}
+}
